Implementing logic to plot bounding-boxes on top of camera-view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:name=".presentation.mainActivity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/App.SplashScreen.Theme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
